--- a/fakews_exe.cfg
+++ b/fakews_exe.cfg
@@ -25,11 +25,12 @@
 -$YD
 -$Z1
 -cc
--AWinTypes=Windows;WinProcs=Windows;DbiTypes=BDE;DbiProcs=BDE;DbiErrs=BDE;
+-AWinTypes=Windows;WinProcs=Windows;DbiTypes=BDE;DbiProcs=BDE;DbiErrs=BDE;fakews_exe=fakews
 -H+
 -W+
 -M
 -$M16384,1048576
 -K$00400000
+-E"bin"
 -LE"c:\programme\delphi6\Projects\Bpl"
 -LN"c:\programme\delphi6\Projects\Bpl"
